# pow-simulator

./: CMakeLists.txt  README.md
src/: Block.cpp  Block.h  Blockchain.cpp  Blockchain.h  difficulty_adjustment.cpp  difficulty_adjustment.h  hash_util.cpp  hash_util.h  main.cpp  mining.cpp  mining.h  sha256.cpp  sha256.h
tests/: hashing_test.cpp  mining_test.cpp  test_Block.cpp  test_Blockchain.cpp
